[project]
name = "eeg-signal-processing-and-visualization-using-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.5",
    "mne>=1.10.1",
    "numpy>=2.2.6",
    "pip>=25.2",
]
